--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="" lang= >
+<html class="" lang=>
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
@@ -11,172 +11,249 @@
     <script src="main.js"></script>
     <script src="assets/js/3.4.5"></script>
     <script>
-        function getGameList(){
-            ListGames().then(res=>{
-                let gameList = document.getElementById('gameList')
-                res.data.forEach(game=>{
+        function addGame(gameId) {
+            console.log('add game', gameId)
+            AddGame(gameId).then(res => {
+                if (res.code == 0) {
+                    getGameList()
+                }
+            })
+        }
+
+        function toggleTabSwitch(name) {
+            let tabs = ['ing', 'begin', 'recharge']
+            tabs.forEach(tab => {
+                if (tab == name) {
+                    document.getElementById(tab).classList.remove('hidden')
+                } else {
+                    document.getElementById(tab).classList.add('hidden')
+                }
+            })
+        }
+
+        function searchGameList() {
+            let keyword = document.getElementById('search').value
+            let searchResult = document.getElementById('searchResult')
+            searchResult.innerHTML = '正在搜索...'
+            searchResult.style.height = 'auto'
+            SearchGame(keyword).then(res => {
+                console.log(res)
+                if (res.code == 0 && res.data) {
+                    searchResult.innerHTML = ''
+                    res.data.forEach(game => {
+                        let div = document.createElement('div')
+                        div.setAttribute('gameId', game.game_id)
+                        div.classList.add('flex', 'items-center', 'gap-3', 'hover:ring', 'px-5', 'w-full', 'justify-between')
+                        div.innerHTML = `<img src="${game.icon_path}" class="object-cover size-10 "/>
+                    <span>${game.name}</span>
+                   <button class="border rounded-xl bg-green-400 p-3 hover:bg-green-400/90" onclick="addGame(${game.game_id})">添加游戏</button>`
+                        searchResult.appendChild(div)
+                    })
+                }
+            })
+        }
+
+        function toggleSearchSection() {
+            document.getElementById('searchSection').classList.toggle('hidden')
+        }
+
+        function formatDateTime(time, format) {
+            let date = new Date(time)
+            let year = date.getFullYear()
+            let month = date.getMonth() + 1
+            let day = date.getDate()
+            let hour = date.getHours()
+            let minute = date.getMinutes()
+            let second = date.getSeconds()
+            return format.replace('yyyy', year).replace('MM', month).replace('dd', day).replace('HH', hour).replace('mm', minute).replace('ss', second)
+
+        }
+
+
+        function getGameList() {
+            ListGames().then(res => {
+                console.log('gamlist', res)
+                if (res.code != 0) {
+                    return false
+                }
+                let result = res.data.games;
+                if (!result) {
+                    return false
+                }
+                let gameList = document.getElementById('gameList');
+                gameList.innerHTML = ''
+                result.forEach(game => {
                     let div = document.createElement('div')
-                    div.classList.add('flex','items-center','gap-3','hover:ring','px-5','w-full')
-                    div.innerHTML = `<img src="${game.icon}" class="object-cover size-10 "/>
-                    <span>${game.name}</span>`
-                    gameList.appendChild(div)
+                    div.classList.add('flex', 'items-center', 'gap-3', 'hover:ring', 'px-5', 'w-full', 'justify-center')
+                    div.setAttribute('gameId', game.game_id)
+                    div.setAttribute('onclick', 'selectGame(this)')
+                    div.innerHTML = `
+                <img src="${game.icon_path}" class="object-cover size-10 "/>
+                <span>${game.name}</span>
+        `
+                 gameList.appendChild(div)
                 })
             })
         }
-        window.onload = function () {
-           getUser().then(res=>{
+
+        async function tryGetUser() {
+            return await getUser().then(res => {
                 if (res.code == 2) {
-                    // alert('请登录')
-                    // window.location.href = 'login.html'
                     toggleLoginSection()
+                    return false;
                 } else {
-                    console.log('user',res)
-                    document.getElementById('userName').innerText = res.data.username
-                    document.getElementById('expireDate').innerText = res.data.expireDate
+                    document.getElementById('userName').innerText = res.data.name
+                    document.getElementById('expireDate').innerText = formatDateTime(new Date(res.data.expire * 1000), 'yyyy年MM月dd日')
                 }
-           })
+                return true;
+            })
         }
-        function toggleLoginSection(){
+
+        window.onload = function () {
+            tryGetUser().then(res => {
+                if (res) {
+                    getGameList()
+                }
+            })
+        }
+
+        function toggleLoginSection() {
             document.getElementById('loginSection').classList.toggle('hidden')
         }
-        function Login(){
+
+        function Login() {
             let account = document.getElementById('account').value;
             let password = document.getElementById('password').value;
-            registerOrLogin(account,password).then(res=>{
-                console.log('login',res)
+            registerOrLogin(account, password).then(res => {
+                // console.log('login',res)
                 if (res.code == 0) {
-                    alert('登录成功')
+                    tryGetUser()
                     toggleLoginSection()
                 } else {
                     alert('登录失败')
                 }
             })
         }
+
+        function selectGame(e) {
+            document.getElementById('gameList').querySelectorAll('div').forEach(item => {
+                item.classList.remove('bg-green-400')
+            })
+            e.classList.add('bg-green-400')
+            toggleTabSwitch('begin')
+            let gameId = e.getAttribute('gameId')
+        }
+
+        function begin(e) {
+            //充值
+            toggleTabSwitch('ing')
+        }
+
+        function stop(e) {
+            toggleTabSwitch('begin')
+        }
+
     </script>
 </head>
 <body class=" ">
 <div class="flex pt-10 h-screen">
-    <div class="h-full w-[300px] border-  border-white flex flex-col	">
+    <div class="h-full w-[300px]   border-white flex flex-col	">
         <!--            game select-->
-        <div id="gameList" class=" flex flex-col items-center mt-5 gap-3 overflow-y-auto	 flex-grow">
-            <div class="flex items-center justify-center gap-3 hover:ring px-5 w-full">
+        <div id="gameList" class=" flex flex-col items-center mt-5 gap-3 overflow-y-auto flex-grow">
+
+            <div class="flex items-center justify-center gap-3 hover:ring  px-5 w-full" onclick="selectGame(this)">
                 <img src="assets/images/csgo.png" class="object-cover size-10 "/>
-                <span>csgo 国际服</span>
-            </div>
-            <div class="flex items-center justify-center gap-3 hover:ring px-5 w-full">
-                <img src="assets/images/csgo.png" class="object-cover size-10 "/>
-                <span>csgo 国际服</span>
-            </div>
-            <div class="flex items-center gap-3 border-bottom">
-                <img src="assets/images/dnf.jpg" class="object-cover size-10 "/>
-                <span>csgo 国际服</span>
-            </div>
-            <div class="flex items-center gap-3 border-bottom">
-                <img src="assets/images/dnf.jpg" class="object-cover size-10 "/>
-                <span>csgo 国际服</span>
-            </div>
-            <div class="flex items-center gap-3 border-bottom">
-                <img src="assets/images/dnf.jpg" class="object-cover size-10 "/>
-                <span>csgo 国际服</span>
-            </div>
-            <div class="flex items-center gap-3 border-bottom">
-                <img src="assets/images/dnf.jpg" class="object-cover size-10 "/>
-                <span>csgo 国际服</span>
-            </div>
-            <div class="flex items-center gap-3 border-bottom">
-                <img src="assets/images/dnf.jpg" class="object-cover size-10 "/>
-                <span>csgo 国际服</span>
-            </div>
-            <div class="flex items-center gap-3 border-bottom">
-                <img src="assets/images/dnf.jpg" class="object-cover size-10 "/>
-                <span>csgo 国际服</span>
-            </div>
-            <div class="flex items-center gap-3 border-bottom">
-                <img src="assets/images/dnf.jpg" class="object-cover size-10 "/>
-                <span>csgo 国际服</span>
-            </div>
-            <div class="flex items-center gap-3 border-bottom">
-                <img src="assets/images/dnf.jpg" class="object-cover size-10 "/>
-                <span>csgo 国际服</span>
-            </div>
-            <div class="flex items-center gap-3 border-bottom">
-                <img src="assets/images/dnf.jpg" class="object-cover size-10 "/>
-                <span>csgo 国际服</span>
-            </div>
-            <div class="flex items-center gap-3 border-bottom">
-                <img src="assets/images/dnf.jpg" class="object-cover size-10 "/>
-                <span>csgo 国际服</span>
-            </div>
-            <div class="flex items-center gap-3 border-bottom">
-                <img src="assets/images/dnf.jpg" class="object-cover size-10 "/>
-                <span>csgo 国际服</span>
-            </div>
-            <div class="flex items-center gap-3 border-bottom">
-                <img src="assets/images/dnf.jpg" class="object-cover size-10 "/>
-                <span>csgo 国际服</span>
-            </div>
-            <div class="flex items-center gap-3 border-bottom">
-                <img src="assets/images/dnf.jpg" class="object-cover size-10 "/>
-                <span>csgo 国际服</span>
-            </div>
-            <div class="flex items-center gap-3 border-bottom">
-                <img src="assets/images/dnf.jpg" class="object-cover size-10 "/>
                 <span>csgo 国际服</span>
             </div>
         </div>
+        <div class="flex items-center justify-center gap-3 hover:ring px-5 w-full cursor-pointer"
+             onclick="toggleSearchSection()">
+            + 添加游戏
+        </div>
         <!--        user section-->
-        <div class="flex item-center gap-3 p-5 border">
+        <div class="flex item-center gap-3 p-5 ">
             <img src="assets/images/logo-universal.png" class="object-cover size-10 rounded-full  ring"/>
             <div class="flex flex-col items-start">
-                <p class="line-clamp-1 break-all">昵称：<span id="userName">12312313131312123123</span></p>
-                <p class="line-clamp-1 break-all">到期：<span id="expireDate">2024年1月1日</span></p>
+                <p class="line-clamp-1 break-all">昵称：<span id="userName"></span></p>
+                <p class="line-clamp-1 break-all">到期：<span id="expireDate"></span></p>
             </div>
         </div>
     </div>
-    <div class="space-y-52 ml-10">
+    <div class=" ml-10" id="detailTabSection">
         <!--        view-->
-        <div>
+        <div id="ing" class="hidden">
+            <div class="flex gap-3">
+                <div class="border w-[400px] py-10">CS GO 国服</div>
+                <button class="border rounded-xl bg-green-400 p-3 hover:bg-green-400/90" onclick="stop(this)">停止加速
+                </button>
+            </div>
+            <div class="flex gap-3 mt-5">
+                <div class=" p-3">累计时长：<span>001小时 01 分</span></div>
+                <div class=" p-3">加速流量：<span>152.1 KB</span></div>
+                <div>
+                </div>
+            </div>
+            <div>
+
+            </div>
+        </div>
+
+        <div id="begin" class="hidden">
             <div class="border w-[400px] py-10">CS GO 国服</div>
             <div class="flex gap-3 mt-5">
                 <div class="border p-3">最近加速：<span>2020-01-02 01：1：:01</span></div>
                 <div class="border p-3">累计时长：<span>001小时 01 分</span></div>
             </div>
-        </div>
-<!--        static-->
-        <div>
-            <button class="border rounded-xl bg-green-400 p-3 hover:bg-green-400/90">停止加速</button>
-            <div class="flex gap-3 mt-5">
-                <div class="border p-3">累计时长：<span>001小时 01 分</span></div>
-                <div class="border p-3">加速流量：<span>152.1 KB</span></div>
-            <div>
-            </div>
-        </div>
-        <!--        operation-->
-        <div class="flex flex-col items-start gap-3">
-            <div class=" flex  gap-3">
-                <select class=" p-3 rounded-xl bg-transparent" required>
-                    <option class="hidden"  checked>选择区服</option>
-                    <option>加速节点2</option>
-                    <option>加速节点3</option>
-                    <option>加速节点4</option>
-                    <option>加速节点5</option>
-                </select>
-            </div>
-            <div>
-                <input type="radio" name="gender" checked value="apple" id='1'><label for="1">固定路由</label></br>
-                <input type="radio" name="gender" checked value="apple" id='2'><label for="2">智能路由</label>
-            </div>
-            <button class="border rounded-xl bg-green-400 p-3 hover:bg-green-400/90">加速游戏</button>
 
+            <div>
+
+                <!--        operation-->
+                <div class="flex flex-col items-start gap-3">
+                    <div class=" flex  gap-3">
+                        <select class=" p-3 rounded-xl bg-transparent" required>
+                            <option class="hidden" checked>选择区服</option>
+                            <option>加速节点2</option>
+                            <option>加速节点3</option>
+                            <option>加速节点4</option>
+                            <option>加速节点5</option>
+                        </select>
+                    </div>
+                    <div>
+                        <input type="radio" name="gender" checked value="apple" id='1'><label
+                            for="1">固定路由</label></br>
+                        <input type="radio" name="gender" checked value="apple" id='2'><label for="2">智能路由</label>
+                    </div>
+                    <button class="border rounded-xl bg-green-400 p-3 hover:bg-green-400/90" onclick="begin(this)">
+                        加速游戏
+                    </button>
+
+                </div>
+            </div>
         </div>
+
+        <div id="recharge" class="hidden"></div>
+
     </div>
-</div>
-    <div id="loginSection"  class="hidden bg-white/50 size-full z-99 fixed top-0  flex items-center justify-center" >
+    <div id="loginSection" class="hidden bg-white/50 size-full z-99 fixed top-0  flex items-center justify-center">
         <div class="bg-white px-10 py-5 rounded-2xl ">
             <div class="flex flex-col items-center gap-3">
-                <input type="text" placeholder="账号" class="border p-3 rounded-xl" id="account"/>
-                <input type="password" placeholder="密码" class="border p-3 rounded-xl" id="password"/>
+                <input type="text" placeholder="账号" class="border p-3 rounded-xl text-black" id="account"/>
+                <input type="password" placeholder="密码" class="border p-3 rounded-xl text-black" id="password"/>
                 <button class="border rounded-xl bg-green-400 p-3 hover:bg-green-400/90" onclick="Login()">登录</button>
+            </div>
+        </div>
+    </div>
+    <div id="searchSection" class=" bg-white/50 size-full z-99 fixed top-0  flex items-center justify-center hidden">
+        <div class="bg-white px-3 py-5 rounded-2xl flex flex-col items-center gap-3 w-[60%]">
+            <div class="flex justify-center border-b-2 w-full items-center">
+                <input type="text" placeholder="搜索某一款游戏" class=" p-3 rounded-xl text-black w-[32]" id="search"
+                       onchange="searchGameList()"/>
+                <button class=" top-3 right-3 bg-red-400 size-4 rounded-full text-white hover:bg-red-400/90 flex items-center justify-center"
+                        onclick="toggleSearchSection()">x
+                </button>
+            </div>
+            <div id="searchResult"
+                 class=" overflow-y-auto max-h-[16]	   text-black  p-3 rounded-xl text-black w-[80%]  flex flex-col gap-3	 ">
             </div>
         </div>
     </div>
