--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -548,7 +548,7 @@
         <div id="searchSection" class=" bg-white/50 size-full z-99 fixed top-0  flex items-center justify-center hidden">
             <div class="bg-white px-3 py-5 rounded-2xl flex flex-col items-center gap-3 w-[60%]">
                 <div class="flex justify-center border-b-2 w-full items-center">
-                    <input type="text" placeholder="搜索某一款游戏" class=" p-3 rounded-xl text-black w-[32]" id="search" onchange="searchGameList()" />
+                    <input type="text" placeholder="搜索某一款游戏" class=" p-3 rounded-xl text-black w-[32]" id="search" oninput="searchGameList()" />
                     <button class=" top-3 right-3 bg-red-400 size-4 rounded-full text-white hover:bg-red-400/90 flex items-center justify-center" onclick="toggleSearchSection()">x
                     </button>
                 </div>
